Feature: download estimate PDF